--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 *.py linguist-language=Python
 *.spec linguist-language=Python
-*.md linguist-language=Markdown
+*.md linguist-documentation
+dist/* linguist-vendored
+build/* linguist-vendored
+*.exe linguist-generated
